# seqabpy

./: README.md  data.json  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  python-package.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_512e4ee422bd9ed5___init___py.html  z_512e4ee422bd9ed5_gatsby_py.html  z_512e4ee422bd9ed5_gavi_py.html
src/seqabpy/: __init__.py  gatsby.py  gavi.py
tests/: test_gavi.py  test_gst.py
